# trading-env

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/rules/: python.mdc
src/trading_env/: __init__.py  config.py  data.py  env.py  environment.py  random_agent.py  trading.py  visualization.py
tests/: test_data.py  test_environment.py  test_trading.py
tests/fixtures/: 2017-06-27_BTC-USD.csv
