[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_env"
version = "0.1.1"
description = "A flexible trading environment for reinforcement learning"
authors = [
  { name="Erik Veenhuis" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "gymnasium>=1.1.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "build==1.2.2.post1",
    "flake8==7.2.0", # Add other dev tools like linters if used
    "isort==6.0.1",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "twine==6.1.0",
]

[project.urls]
"Homepage" = "https://github.com/your_username/trading-env"
"Bug Tracker" = "https://github.com/your_username/trading-env/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 